apps/homepage/overlays/staging/homepage.yaml
---
# Source: homepage/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage-staging
  labels:
    helm.sh/chart: homepage-4.2.0
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
  ipFamilyPolicy: PreferDualStack
---
# Source: homepage/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage-staging
  labels:
    helm.sh/chart: homepage-4.2.0
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
      app.kubernetes.io/instance: homepage
  template:
    metadata:
      labels:
        helm.sh/chart: homepage-4.2.0
        app.kubernetes.io/name: homepage
        app.kubernetes.io/instance: homepage
        app.kubernetes.io/version: "v1.5.0"
        app.kubernetes.io/part-of: homepage
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: homepage
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: homepage
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/gethomepage/homepage:v1.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
          volumeMounts:
            - mountPath: /app/config/custom.js
              name: homepage-config
              subPath: custom.js
            - mountPath: /app/config/custom.css
              name: homepage-config
              subPath: custom.css
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: homepage-config
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config
              subPath: widgets.yaml
            - mountPath: /app/config/logs
              name: logs
      volumes:
        - name: config
          emptyDir: {}
        - name: logs
          emptyDir: {}
---
# Source: homepage/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "homepage-test-connection"
  namespace: homepage-staging
  labels:
    helm.sh/chart: homepage-4.2.0
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['homepage:80']
  restartPolicy: Never
