apps/homepage/overlays/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage-staging
  labels:
    app.kubernetes.io/name: homepage
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: homepage
